@@ -46,6 +46,11 @@ O(x^0)
 2*x + O(x^2)
 2*x - 8/3*x^3 + 32/5*x^5 - 128/7*x^7 + 512/9*x^9 - 2048/11*x^11 + 8192/13*x^
 13 - 32768/15*x^15 + O(x^17)
+x + 2*x^2 + O(x^3)
+2*x^2 + O(x^3)
+O(x^100)
+x + O(x^2)
+Mod(0, 3)*x + O(x^2)
 1 + 2*x + 3*x^2 + O(x^3)
 1 + 2*x + 3*x^2 + O(x^6)
 1 + 2*x - 5*x^2 + O(x^3)
@@ -141,4 +146,4 @@ O(x^18)
   ***   at top-level: Ser("")
   ***                 ^-------
   *** Ser: incorrect type in Ser (t_STR).
-Total time spent: 4
+Total time spent: 11
